Global documentation improvement up to 90–95% API coverage for EN+RU (#67)
* Reinforced Ru & En docs with 90-95% functionality coverage

* Reinforced last http-client.md & http-server.md & kafka.md docs

* Kafka reinforced

* Cleanup

* Reinforced docs http-client.md

* Reinforced kafka.md

* Reinforce documentation for 32 remaining modules (90–95% API coverage, EN+RU) (#65)

* 1.2.18 (#66)

* 1.2.18

* Reinforced grpc-server, grpc-client, database-jdbc, database-r2dbc, config, container docs

Expanded EN docs to 90-95% public-API coverage and re-translated RU (EN/RU parity).
Every documented API verified against Kora sources (branch 1.0 = 1.2.17).

- gitignore .kora-agent (local Kora sources for verification) and .DS_Store

* Reinforced json, validation, cache, resilient, scheduling, metrics, tracing, s3-client, openapi-codegen, mapstruct docs

Expanded EN docs to 90-95% public-API coverage and re-translated RU (EN/RU parity).
Every documented API verified against Kora sources (branch 1.0 = 1.2.17).

- tracing: corrected exporter config to retryPolicy and OpentelemetryTracingModule
- s3-client: fixed @Bucket array syntax and testing link (junit5.md)

* Reinforced database-cassandra, database-common, database-migration, general, junit5, logging-aspect, logging-slf4j, netty, openapi-management, probes docs

Expanded EN docs to 90-95% coverage and re-translated RU (EN/RU parity).
Every documented API verified against Kora sources (branch 1.0 = 1.2.17).

- junit5/probes/logging-slf4j: removed hallucinated identifiers from frontmatter triggers
- logging-aspect: added missing Kotlin tab for the StructuredArgument example
- logging-slf4j: fixed Kafka config cross-links (config-consumer / config-producer)

* Reinforced camunda7-bpmn, camunda7-rest, camunda8-worker, database-vertx, graalvm-native, soap-client docs

Expanded EN docs to 90-95% coverage and re-translated RU (EN/RU parity).
Every documented API verified against Kora sources (branch 1.0 = 1.2.17).
Completes rein